--- a/nodes.yaml
+++ b/nodes.yaml
@@ -1,20 +1,20 @@
 ---
 - name: master-node01
-  box: "bento/ubuntu-24.04"
+  box: "alvistack/ubuntu-24.04"
   ram: "2048"
   public_ip: 192.168.1.80
   network_interface: wlp61s0
   network_type: "public_network"
   hostname: master-node01
 - name: worker-node01
-  box: "bento/ubuntu-24.04"
+  box: "alvistack/ubuntu-24.04"
   public_ip: 192.168.1.81
   network_interface: wlp61s0
   network_type: "public_network"
   ram: 2048
   hostname: worker-node01
 - name: worker-node02
-  box: "bento/ubuntu-24.04"
+  box: "alvistack/ubuntu-24.04"
   public_ip: 192.168.1.82
   network_interface: wlp61s0
   network_type: "public_network"
