Switch to weave for netpol

--- a/group_vars/all/vars.yaml
+++ b/group_vars/all/vars.yaml
@@ -21,4 +21,4 @@ k8s_url_apt_key: "https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key"
 k8s_gpgpath: "/etc/apt/keyrings/kubernetes.key"
 k8s_repository: "https://pkgs.k8s.io/core:/stable:/v1.32/deb/"
 network_pod_cidr: 10.244.0.0/16
-flannel_url: "https://github.com/flannel-io/flannel/releases/download/v0.27.2/kube-flannel.yml"
+weave_url: "https://github.com/flannel-io/flannel/releases/download/v0.27.2/kube-flannel.yml"
