--- a/roles/master_node_setup/tasks/k8s_conf.yml
+++ b/roles/master_node_setup/tasks/k8s_conf.yml
@@ -1,24 +1,10 @@
 ---
-- name: "Create flannel directory"
-  ansible.builtin.file:
-    path: /run/flannel/
-    state: directory
-    mode: '0755'
-
-- name: "creating flannel file"
-  ansible.builtin.copy:
-    src: "flannel.env"
-    dest: /run/flannel/subnet.env
-
-
 - name: export kubeconfig
   shell: rm -rf $HOME/.kube/ && mkdir -p $HOME/.kube && cp -i /etc/kubernetes/admin.conf $HOME/.kube/config && chown $(id -u):$(id -g) $HOME/.kube/config
 
-- name: add custom interface and apply the deployment
-  shell: wget "{{ flannel_url }}"
 
-- name: add custom interface and apply the deployment
-  shell: sed '/- --kube-subnet-mgr/a  \ \ \ \ \ \ \ \ - --iface=eth1' kube-flannel.yml  | kubectl apply -f -
+- name: apply weave deploy
+  shell: ubectl apply -f "{{ weave_url }}"
 
 - name: capture join command
   shell: cat output.txt  | grep -A 1 "kubeadm join"
