--- a/roles/master_node_setup/tasks/k8s_conf.yml
+++ b/roles/master_node_setup/tasks/k8s_conf.yml
@@ -4,12 +4,12 @@
 
 - name: Copy cilium install script
   copy:
-    src: cilium_install.sh
+    src: cilium_install_ipsec.sh
     dest: /root/
     mode: u=rwx,g=r,o=r
 
 - name: run cilium install script
-  shell: /root/cilium_install.sh
+  shell: /root/cilium_install_ipsec.sh
 
 - name: capture join command
   shell: cat output.txt  | grep -A 1 "kubeadm join"
