--- a/roles/master_node_setup/tasks/k8s_conf.yml
+++ b/roles/master_node_setup/tasks/k8s_conf.yml
@@ -4,7 +4,7 @@
 
 
 - name: apply weave deploy
-  shell: ubectl apply -f "{{ weave_url }}"
+  shell: kubectl apply -f "{{ weave_url }}"
 
 - name: capture join command
   shell: cat output.txt  | grep -A 1 "kubeadm join"
