--- a/roles/common_setup/tasks/files.yml
+++ b/roles/common_setup/tasks/files.yml
@@ -1,5 +1,14 @@
 ---
 # tasks file for files
+- name: Create containerd directory
+  ansible.builtin.file:
+    path: /etc/containerd
+    state: directory
+    mode: '0755'
+
+- name: Generate containerd config
+  shell: containerd config default > /etc/containerd/config.toml
+
 - name: "creating service files"
   ansible.builtin.copy:
     src: "containerd.service"
